[package]
name = "skinvas"
version = "0.1.0"
edition = "2021"
authors = ["Ngoc Dao"]
description = "HTML5 Canvas API implementation using Rust and Skia"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.16.17"
napi-derive = "2.16.13"
skia-safe = "0.84.0"
once_cell = "1.21.3"

[build-dependencies]
napi-build = "2.2.0"

[profile.release]
lto = true
opt-level = 3
